<resources>
    <string name="app_name">Instagram</string>
    <string name="icon">icon</string>
    <string name="logo">logo</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="please_wait">Please Wait</string>
    <string name="new_to_instagram">New To Instagram? Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="image">Image</string>
    <string name="post">POST</string>
    <string name="description">Description...</string>
    <string name="search">Search...</string>
    <string name="full_name">Full Name</string>
</resources>