<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center"
    tools:context=".RegisterActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:autofillHints="password"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginTop="15dp"
        android:text="@string/log_in"
        android:id="@+id/login"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/registerUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_to_instagram"
        android:layout_marginTop="15dp"/>


</LinearLayout>