<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar"
        android:background="?android:attr/windowBackground">
        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="?android:attr/windowBackground">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/baseline_close_24"
                    android:id="@+id/close"
                    android:contentDescription="@string/image" />
                <TextView
                    android:id="@+id/post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:text="@string/post"
                    android:textColor="@color/purple_500"
                    android:textSize="18sp"
                    tools:ignore="RelativeOverlap"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <com.canhub.cropper.CropImageView
            android:id="@+id/image_added"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:id="@+id/description"
            android:hint="@string/description"
            android:layout_marginTop="15dp"
            android:textColorLink="@color/purple_500"
            />

    </LinearLayout>

</LinearLayout>